trying to sort the grid row gap issues

--- a/frontend/src/components/Home/Players/Players.scss
+++ b/frontend/src/components/Home/Players/Players.scss
@@ -29,7 +29,7 @@
     grid-template-columns: min-content max-content;
     /* spacing */
     grid-column-gap: 20px;
-    grid-row-gap: 4vh;
+    grid-row-gap: 1rem;
     align-items: center;
     @media screen and (max-width: 94em) {
       grid-template-columns: repeat(3, min-content max-content);
@@ -39,11 +39,11 @@
     }
   }
   &__img {
-    width: 7rem;
+    width: 5.5rem;
     border-radius: 50%;
     display: block;
     @media screen and (max-width: 20em) {
-      width: 7.5rem;
+      width: 6rem;
     }
   }
   &__stats {
